--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,13 +1,15 @@
 html, body{ min-height: 100%; padding: 0; margin: 0; display: block; color: #000 }
 *{ box-sizing: border-box; font-family: monospace, sans-serif }
 h1{ margin: 0 0 30px }
-.page{ min-height: 100%; display: flex; background: #efefef; padding: 40px }
-.page > div{ padding: 20px 20px 0; width: calc(100% / 3) }
+.page{ min-height: 100%; display: flex; background: #efefef; padding: 40px; justify-content: center; flex-wrap: wrap }
+.page > div{ padding: 20px 20px 0; width: 100%; max-width: 500px; min-width: 300px }
 .page > div > form{ padding: 30px; border-radius: 20px; background: #fff; box-shadow: 0 0 20px rgba(0, 0, 0, 0.05); display: flex; flex-wrap: wrap }
 .input-text{ width: 100% }
-.input-text input{ width: 100%; display: flex; align-items: center; padding: 0 15px; height: 35px; font-size: 16px; font-weight: 400; background: #fff; border: 1px solid rgba(0, 0, 0, 0.25); border-radius: 8px; outline: none; color: #000 }
+.input-text input, .select_file{ width: 100%; display: flex; align-items: center; padding: 0 15px; height: 35px; font-size: 16px; font-weight: 400; background: #fff; border: 1px solid rgba(0, 0, 0, 0.25); border-radius: 8px; outline: none; color: #000 }
+.input-text input[type=file]{ display: none }
 .input-text input:hover{ border-color: rgba(0, 0, 0, .5) }
-.input-text label{ font-size: 14px; display: block; padding: 0 10px 10px }
+.input-text label{ font-size: 14px; display: block; padding: 0 10px 10px; cursor: pointer }
+label.select_file{ display: flex; align-items: center; justify-content: center; padding: 0 15px }
 .checkbox, .radio{ display: flex; align-items: center; font-size: 16px; line-height: 120%; margin-top: 20px; width: 100%; cursor: pointer }
 .checkbox label, .radio label{ display: block; padding: 0 8px; flex-grow: 1 }
 .radios{ margin-top: 20px; width: 50% }
