--- a/demo/demo.css
+++ b/demo/demo.css
@@ -9,13 +9,19 @@ h1{ margin: 0 0 30px }
 .input-text input[type=file]{ display: none }
 .input-text input:hover{ border-color: rgba(0, 0, 0, .5) }
 .input-text label{ font-size: 14px; display: block; padding: 0 10px 10px; cursor: pointer }
-label.select_file{ display: flex; align-items: center; justify-content: center; padding: 0 15px }
+label.select_file{ display: flex; align-items: center; justify-content: center; padding: 0 15px; background: #f1f1f1 }
 .checkbox, .radio{ display: flex; align-items: center; font-size: 16px; line-height: 120%; margin-top: 20px; width: 100%; cursor: pointer }
 .checkbox label, .radio label{ display: block; padding: 0 8px; flex-grow: 1 }
 .radios{ margin-top: 20px; width: 50% }
 .radio{ margin-top: 10px }
-.radio-name{ font-size: 16px; font-weight: 600 }
+.radio-name{ font-size: 16px; font-weight: 600; width: 100% }
 button{ font-size: 16px; line-height: 120%; display: flex; align-items: center; height: 40px; border: 0; color: #fff; background: #2e80f3; margin-top: 40px; text-align: center; width: 100%; border-radius: 8px; justify-content: center; outline: none }
 .required{ color: rgba(0, 0, 0, .5); font-size: 14px }
-.error_block{ display: none; margin-top: 20px; width: 100% }
-.error_block > div{ width: 100%; padding: 12px 25px; font-size: 16px; line-height: 130%; font-weight: 500; background: #ffebeb; border-radius: 8px; color: red }
+.error_block, .success_block{ display: none; margin-top: 20px; width: 100% }
+.error_block > div, .success_block > div{ width: 100%; padding: 12px 25px; font-size: 16px; line-height: 130%; font-weight: 500; background: #ffebeb; border-radius: 8px; color: red }
+.success_block > div{ background: #dfffde; color: #3a9e28 }
+.progress{ width: 100%; height: 15px; margin-top: 15px; background: #f1f1f1; border-radius: 99px; overflow: hidden; display: none; position: relative }
+.progress-bar{ position: absolute; top: 0; left: 0; bottom: 0; width: 0; border-radius: 99px; background: #2e80f3; transition: width 0.5s }
+.file-name{ font-weight: 700 }
+.checkboxes{ display: flex; align-items: center; flex-wrap: wrap; width: 100%; margin-top: 20px }
+.checkboxes .checkbox{ width: 50%; margin-top: 10px }
